working on round system and winner/loser

--- a/MyProject2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/MyProject2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -134,7 +134,7 @@ CurrentPosGridSize=0
 LastLevel=/Game/Levels/MainMenu
 
 [ModuleFileTracking]
-MyProject2.TimeStamp=2024.01.04-10.07.08
+MyProject2.TimeStamp=2024.01.04-11.50.00
 MyProject2.LastCompileMethod=Runtime
 PakFile.TimeStamp=2023.03.31-12.12.07
 PakFile.LastCompileMethod=Unknown
@@ -2477,7 +2477,7 @@ WmfMediaSettings=True
 
 [DetailPropertyExpansion]
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
-Object=
+Object="\"Object.Appearance.Font\" \"Object.Layout.Slot\" "
 CrashReportsPrivacySettings="\"Object.Options.bSendUnattendedBugReports\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 RectLight="\"Object.Light.RectLightComponent.Object.Light.LightColor\" "
@@ -2506,8 +2506,8 @@ RawInputSettings="\"Object.Device Configurations.DeviceConfigurations\" \"Object
 DeveloperSettings="\"Object.Device Configurations.DeviceConfigurations\" \"Object.Device Configurations.DeviceConfigurations.DeviceConfigurations[0]\" \"Object.Device Configurations.DeviceConfigurations.DeviceConfigurations[0].AxisProperties\" \"Object.Device Configurations.DeviceConfigurations.DeviceConfigurations[0].AxisProperties.AxisProperties[0]\" \"Object.Device Configurations.DeviceConfigurations.DeviceConfigurations[0].AxisProperties.AxisProperties[1]\" \"Object.Device Configurations.DeviceConfigurations.DeviceConfigurations[0].AxisProperties.AxisProperties[2]\" \"Object.Device Configurations.DeviceConfigurations.DeviceConfigurations[0].AxisProperties.AxisProperties[3]\" \"Object.Device Configurations.DeviceConfigurations.DeviceConfigurations[0].AxisProperties.AxisProperties[4]\" \"Object.Device Configurations.DeviceConfigurations.DeviceConfigurations[0].AxisProperties.AxisProperties[5]\" \"Object.Device Configurations.DeviceConfigurations.DeviceConfigurations[0].ButtonProperties\" \"Object.Device Configurations.DeviceConfigurations.DeviceConfigurations[0].ButtonProperties.ButtonProperties[1]\" \"Object.Device Configurations.DeviceConfigurations.DeviceConfigurations[0].ButtonProperties.ButtonProperties[6]\" \"Object.Device Configurations.DeviceConfigurations.DeviceConfigurations[0].ButtonProperties.ButtonProperties[7]\" "
 TextBlock="\"Object.Appearance.Font\" \"Object.Layout.Slot\" "
 TextLayoutWidget="\"Object.Appearance.Font\" \"Object.Layout.Slot\" "
-Widget="\"Object.Appearance.WidgetStyle\" \"Object.Layout.Slot\" "
-Visual="\"Object.Appearance.WidgetStyle\" \"Object.Layout.Slot\" "
+Widget="\"Object.Appearance.Font\" \"Object.Layout.Slot\" "
+Visual="\"Object.Appearance.Font\" \"Object.Layout.Slot\" "
 WidgetComponent="\"Object.Collision.BodyInstance\" "
 ProgressBar="\"Object.Appearance.FillColorAndOpacity\" \"Object.Layout.Slot\" "
 MAINHUD_NEW_C="\"Object.Layout.Slot\" "
@@ -2515,7 +2515,7 @@ MyPlayerHUD="\"Object.Layout.Slot\" "
 UserWidget="\"Object.Layout.Slot\" "
 Image="\"Object.Appearance.Brush\" \"Object.Layout.Slot\" "
 CanvasPanel="\"Object.Layout.Slot\" "
-PanelWidget="\"Object.Appearance.WidgetStyle\" \"Object.Layout.Slot\" "
+PanelWidget="\"Object.Layout.Slot\" "
 StaticMeshComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 Shooter_GameMode_BP_C="\"Object.Pickup.PickupLocations\" \"Object.Pickup.PickupClasses\" "
 MyProject2GameModeBase="\"Object.Pickup.PickupLocations\" \"Object.Pickup.PickupClasses\" "
@@ -2758,12 +2758,12 @@ Ammo_C=CapsuleComponent.Physics.ConstraintsGroup,CapsuleComponent.Collision.Coll
 WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Levels/MainMenu
-MRUItem1=/Game/Shooter_GameMode_BP
-MRUItem2=/Game/GameModeBP
-MRUItem3=/Game/Levels/TechDemo4Level1
-MRUItem4=/Game/TestPlayerController
-MRUItem5=/Game/MAINHUD_NEW
+MRUItem0=/Game/MAINHUD_NEW
+MRUItem1=/Game/Levels/MainMenu
+MRUItem2=/Game/Shooter_GameMode_BP
+MRUItem3=/Game/GameModeBP
+MRUItem4=/Game/Levels/TechDemo4Level1
+MRUItem5=/Game/TestPlayerController
 MRUItem6=/Game/MainMenu2
 MRUItem7=/Game/MainMenuGameModeBP
 MRUItem8=/Game/MainMenuWB
@@ -3061,7 +3061,6 @@ Special Effects=False
 Synth=False
 User Created=False
 Advanced=False
-Common=False
 
 [UMGEditor.Designer]
 PreviewWidth=1280
