death anim and bullet sounds. next round also comes in if player dies

--- a/MyProject2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/MyProject2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -134,7 +134,7 @@ CurrentPosGridSize=0
 LastLevel=/Game/Levels/MainMenu
 
 [ModuleFileTracking]
-MyProject2.TimeStamp=2024.01.04-16.24.47
+MyProject2.TimeStamp=2024.01.05-17.02.44
 MyProject2.LastCompileMethod=Runtime
 PakFile.TimeStamp=2023.03.31-12.12.07
 PakFile.LastCompileMethod=Unknown
@@ -2392,6 +2392,22 @@ GameModeBP_C.Classes=True
 GameModeBP_C.Game=True
 GameModeBP_C.GameMode=True
 BP_MyPlayer1_C.Player Info=True
+BP_MyPlayer1_C.Position=True
+BP_MyPlayer1_C.DEATH=True
+BP_MyPlayer1_C.DEATH MAIN ANIM=True
+SoundWave.Format=True
+SoundWave.Playback=True
+SoundWave.Sound=True
+SoundWave.Loading=True
+SoundWave.Subtitles=True
+SoundWave.Analysis=True
+SoundWave.Info=True
+SoundWave.File Path=True
+SoundWave.Developer=True
+SoundWave.Voice Management=True
+SoundWave.Effects=True
+SoundWave.Attenuation=True
+BP_MyPlayer1_C.Sounds=True
 
 [DetailMultiObjectNodeExpansion]
 EditorStyleSettings=True
@@ -2493,8 +2509,8 @@ MovementComponent="\"Object.Character Movement (Rotation Settings).RotationRate\
 ActorComponent=
 SkeletalMeshComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 SkinnedMeshComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-MeshComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-PrimitiveComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+MeshComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+PrimitiveComponent=
 SceneComponent=
 CapsuleComponent=
 ShapeComponent=
@@ -2736,7 +2752,7 @@ UdpMessagingSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,Input
 WmfMediaSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.Turn,InputSettings.Bindings.AxisMappings.LookUp,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.ActionMappings.PlayerAim,InputSettings.Bindings.ActionMappings.PlayerShoot,InputSettings.Bindings.ActionMappings.Pickup,
 BlendSpace=BlendSpace.Axis Settings.Horizontal Axis,BlendSpace.Axis Settings.Vertical Axis,BlendSpace.BlendSamples.GroupName,
 SkeletalMeshComponent=SkeletalMeshComponent.Collision.Collision,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Rendering.TextureStreaming,SkeletalMeshComponent.Rendering.LOD,
-CapsuleComponent=CapsuleComponent.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,
+CapsuleComponent=
 SceneComponent=
 PlayerStart=CapsuleComponent.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,
 AimOffsetBlendSpace=AimOffsetBlendSpace.Axis Settings.Horizontal Axis,AimOffsetBlendSpace.Axis Settings.Vertical Axis,
@@ -2761,26 +2777,26 @@ Ammo_C=CapsuleComponent.Physics.ConstraintsGroup,CapsuleComponent.Collision.Coll
 WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Levels/MainMenu
-MRUItem1=/Game/AimingBeam
-MRUItem2=/Game/MAINHUD_NEW
-MRUItem3=/Game/Shooter_GameMode_BP
-MRUItem4=/Game/Levels/TechDemo4Level1
-MRUItem5=/Game/GameModeBP
-MRUItem6=/Game/TestPlayerController
-MRUItem7=/Game/MainMenu2
-MRUItem8=/Game/MainMenuGameModeBP
-MRUItem9=/Game/MainMenuWB
-MRUItem10=/Game/Walls
-MRUItem11=/Game/Health
-MRUItem12=/Game/Barriers
-MRUItem13=/Game/StarterContent/Materials/M_Basic_Wall
-MRUItem14=/Game/StarterContent/Shapes/Shape_Cylinder
-MRUItem15=/Game/PickupColour
-MRUItem16=/Game/Ammo
-MRUItem17=/Game/AmmoPickup
-MRUItem18=/Game/BP_MyPlayer1
-MRUItem19=/Game/PickupTest
+MRUItem0=/Game/pistol
+MRUItem1=/Game/fight
+MRUItem2=/Game/PlayerStuff/Offset_AIM_Up
+MRUItem3=/Game/PlayerStuff/Offset_AIM_Forward
+MRUItem4=/Game/PlayerStuff/DYING
+MRUItem5=/Game/PlayerStuff/walking_to_dying
+MRUItem6=/Game/PlayerStuff/NEWFIRING
+MRUItem7=/Game/PlayerStuff/FIRING
+MRUItem8=/Game/PlayerStuff/firing_rifle
+MRUItem9=/Game/MAINHUD_NEW
+MRUItem10=/Game/BP_MyPlayer1
+MRUItem11=/Game/Levels/MainMenu
+MRUItem12=/Game/AimingBeam
+MRUItem13=/Game/Shooter_GameMode_BP
+MRUItem14=/Game/Levels/TechDemo4Level1
+MRUItem15=/Game/GameModeBP
+MRUItem16=/Game/TestPlayerController
+MRUItem17=/Game/MainMenu2
+MRUItem18=/Game/MainMenuGameModeBP
+MRUItem19=/Game/MainMenuWB
 
 [PlacementMode]
 RecentlyPlaced=/Game/Walls.Walls;
@@ -3007,7 +3023,7 @@ Contexts=(Name="PhysicsAssetEditor.Viewport0",Commands=)
 /Game/BP_MyPlayer1.BP_MyPlayer1=0
 /Game/PlayerStuff/walking.walking=1
 /Game/PlayerStuff/walking_backwards.walking_backwards=1
-/Game/PlayerStuff/firing_rifle.firing_rifle=1
+/Game/PlayerStuff/firing_rifle.firing_rifle=0
 /Game/PlayerStuff/start_walking.start_walking=1
 /Game/PlayerStuff/SoldierBlendSpace.SoldierBlendSpace=1
 /Game/PlayerStuff/walk_right.walk_right=1
@@ -3048,6 +3064,11 @@ Contexts=(Name="PhysicsAssetEditor.Viewport0",Commands=)
 /Game/Levels/TechDemo4Level1.TechDemo4Level1:PersistentLevel.TechDemo4Level1=0
 /Game/MainMenuWB.MainMenuWB=0
 /Game/GameModeBP.GameModeBP=1
+/Game/PlayerStuff/walking_to_dying.walking_to_dying=0
+/Game/PlayerStuff/DYING.DYING=0
+/Game/PlayerStuff/Offset_AIM_Forward.Offset_AIM_Forward=0
+/Game/fight.fight=1
+/Game/pistol.pistol=1
 
 [/Script/UnrealEd.AnimationBlueprintEditorOptions]
 bHideUnrelatedNodes=False
