trying to implement damage notifier

--- a/MyProject2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/MyProject2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -134,7 +134,7 @@ CurrentPosGridSize=0
 LastLevel=/Game/Levels/MainMenu
 
 [ModuleFileTracking]
-MyProject2.TimeStamp=2024.01.05-17.02.44
+MyProject2.TimeStamp=2024.01.05-18.34.56
 MyProject2.LastCompileMethod=Runtime
 PakFile.TimeStamp=2023.03.31-12.12.07
 PakFile.LastCompileMethod=Unknown
@@ -2408,6 +2408,8 @@ SoundWave.Voice Management=True
 SoundWave.Effects=True
 SoundWave.Attenuation=True
 BP_MyPlayer1_C.Sounds=True
+MAINHUD_NEW_C.Animation=True
+MAINHUD_NEW_C.MyPlayerHUD=True
 
 [DetailMultiObjectNodeExpansion]
 EditorStyleSettings=True
@@ -2521,16 +2523,16 @@ K2Node=
 EdGraphNode=
 RawInputSettings="\"Object.Device Configurations.DeviceConfigurations\" \"Object.Device Configurations.DeviceConfigurations.DeviceConfigurations[0]\" \"Object.Device Configurations.DeviceConfigurations.DeviceConfigurations[0].AxisProperties\" \"Object.Device Configurations.DeviceConfigurations.DeviceConfigurations[0].AxisProperties.AxisProperties[0]\" \"Object.Device Configurations.DeviceConfigurations.DeviceConfigurations[0].AxisProperties.AxisProperties[1]\" \"Object.Device Configurations.DeviceConfigurations.DeviceConfigurations[0].AxisProperties.AxisProperties[2]\" \"Object.Device Configurations.DeviceConfigurations.DeviceConfigurations[0].AxisProperties.AxisProperties[3]\" \"Object.Device Configurations.DeviceConfigurations.DeviceConfigurations[0].AxisProperties.AxisProperties[4]\" \"Object.Device Configurations.DeviceConfigurations.DeviceConfigurations[0].AxisProperties.AxisProperties[5]\" \"Object.Device Configurations.DeviceConfigurations.DeviceConfigurations[0].ButtonProperties\" \"Object.Device Configurations.DeviceConfigurations.DeviceConfigurations[0].ButtonProperties.ButtonProperties[1]\" \"Object.Device Configurations.DeviceConfigurations.DeviceConfigurations[0].ButtonProperties.ButtonProperties[6]\" \"Object.Device Configurations.DeviceConfigurations.DeviceConfigurations[0].ButtonProperties.ButtonProperties[7]\" "
 DeveloperSettings="\"Object.Device Configurations.DeviceConfigurations\" \"Object.Device Configurations.DeviceConfigurations.DeviceConfigurations[0]\" \"Object.Device Configurations.DeviceConfigurations.DeviceConfigurations[0].AxisProperties\" \"Object.Device Configurations.DeviceConfigurations.DeviceConfigurations[0].AxisProperties.AxisProperties[0]\" \"Object.Device Configurations.DeviceConfigurations.DeviceConfigurations[0].AxisProperties.AxisProperties[1]\" \"Object.Device Configurations.DeviceConfigurations.DeviceConfigurations[0].AxisProperties.AxisProperties[2]\" \"Object.Device Configurations.DeviceConfigurations.DeviceConfigurations[0].AxisProperties.AxisProperties[3]\" \"Object.Device Configurations.DeviceConfigurations.DeviceConfigurations[0].AxisProperties.AxisProperties[4]\" \"Object.Device Configurations.DeviceConfigurations.DeviceConfigurations[0].AxisProperties.AxisProperties[5]\" \"Object.Device Configurations.DeviceConfigurations.DeviceConfigurations[0].ButtonProperties\" \"Object.Device Configurations.DeviceConfigurations.DeviceConfigurations[0].ButtonProperties.ButtonProperties[1]\" \"Object.Device Configurations.DeviceConfigurations.DeviceConfigurations[0].ButtonProperties.ButtonProperties[6]\" \"Object.Device Configurations.DeviceConfigurations.DeviceConfigurations[0].ButtonProperties.ButtonProperties[7]\" "
-TextBlock="\"Object.Appearance.Font\" \"Object.Layout.Slot\" "
-TextLayoutWidget="\"Object.Appearance.Font\" \"Object.Layout.Slot\" "
-Widget="\"Object.Layout.Slot\" "
-Visual="\"Object.Layout.Slot\" "
+TextBlock="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Layout.Slot\" "
+TextLayoutWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Layout.Slot\" "
+Widget="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" "
+Visual="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" "
 WidgetComponent="\"Object.Collision.BodyInstance\" "
 ProgressBar="\"Object.Appearance.FillColorAndOpacity\" \"Object.Layout.Slot\" "
-MAINHUD_NEW_C="\"Object.Layout.Slot\" "
-MyPlayerHUD="\"Object.Layout.Slot\" "
-UserWidget="\"Object.Layout.Slot\" "
-Image="\"Object.Appearance.Brush\" \"Object.Layout.Slot\" "
+MAINHUD_NEW_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" "
+MyPlayerHUD="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" "
+UserWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" "
+Image="\"Object.Appearance.Brush\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" "
 CanvasPanel="\"Object.Layout.Slot\" "
 PanelWidget="\"Object.Layout.Slot\" "
 StaticMeshComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
@@ -2777,21 +2779,21 @@ Ammo_C=CapsuleComponent.Physics.ConstraintsGroup,CapsuleComponent.Collision.Coll
 WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,
 
 [ContentBrowserRecent]
-MRUItem0=/Game/pistol
-MRUItem1=/Game/fight
-MRUItem2=/Game/PlayerStuff/Offset_AIM_Up
-MRUItem3=/Game/PlayerStuff/Offset_AIM_Forward
-MRUItem4=/Game/PlayerStuff/DYING
-MRUItem5=/Game/PlayerStuff/walking_to_dying
-MRUItem6=/Game/PlayerStuff/NEWFIRING
-MRUItem7=/Game/PlayerStuff/FIRING
-MRUItem8=/Game/PlayerStuff/firing_rifle
-MRUItem9=/Game/MAINHUD_NEW
-MRUItem10=/Game/BP_MyPlayer1
-MRUItem11=/Game/Levels/MainMenu
-MRUItem12=/Game/AimingBeam
-MRUItem13=/Game/Shooter_GameMode_BP
-MRUItem14=/Game/Levels/TechDemo4Level1
+MRUItem0=/Game/Levels/MainMenu
+MRUItem1=/Game/Levels/TechDemo4Level1
+MRUItem2=/Game/MAINHUD_NEW
+MRUItem3=/Game/pistol
+MRUItem4=/Game/fight
+MRUItem5=/Game/PlayerStuff/Offset_AIM_Up
+MRUItem6=/Game/PlayerStuff/Offset_AIM_Forward
+MRUItem7=/Game/PlayerStuff/DYING
+MRUItem8=/Game/PlayerStuff/walking_to_dying
+MRUItem9=/Game/PlayerStuff/NEWFIRING
+MRUItem10=/Game/PlayerStuff/FIRING
+MRUItem11=/Game/PlayerStuff/firing_rifle
+MRUItem12=/Game/BP_MyPlayer1
+MRUItem13=/Game/AimingBeam
+MRUItem14=/Game/Shooter_GameMode_BP
 MRUItem15=/Game/GameModeBP
 MRUItem16=/Game/TestPlayerController
 MRUItem17=/Game/MainMenu2
@@ -2824,7 +2826,7 @@ RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLigh
 InstalledPlugins=XRVisualization
 
 [MessageLog]
-LastLogListing=PIE
+LastLogListing=BlueprintLog
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
