--- a/MyProject2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/MyProject2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -78,7 +78,7 @@ bLaunchSeparateServer=False
 PlayNetMode=PIE_Standalone
 RunUnderOneProcess=True
 PlayNetDedicated=False
-PlayNumberOfClients=1
+PlayNumberOfClients=2
 ServerPort=17777
 ClientWindowWidth=640
 AutoConnectToServer=True
@@ -134,7 +134,7 @@ CurrentPosGridSize=0
 LastLevel=/Game/Levels/MainMenu
 
 [ModuleFileTracking]
-MyProject2.TimeStamp=2024.01.05-18.34.56
+MyProject2.TimeStamp=2024.01.05-20.40.53
 MyProject2.LastCompileMethod=Runtime
 PakFile.TimeStamp=2023.03.31-12.12.07
 PakFile.LastCompileMethod=Unknown
@@ -2496,7 +2496,7 @@ WmfMediaSettings=True
 
 [DetailPropertyExpansion]
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
-Object=
+Object="\"Object.SkeletalMeshes\" "
 CrashReportsPrivacySettings="\"Object.Options.bSendUnattendedBugReports\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 RectLight="\"Object.Light.RectLightComponent.Object.Light.LightColor\" "
@@ -2779,21 +2779,21 @@ Ammo_C=CapsuleComponent.Physics.ConstraintsGroup,CapsuleComponent.Collision.Coll
 WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Levels/MainMenu
-MRUItem1=/Game/Levels/TechDemo4Level1
-MRUItem2=/Game/MAINHUD_NEW
-MRUItem3=/Game/pistol
-MRUItem4=/Game/fight
-MRUItem5=/Game/PlayerStuff/Offset_AIM_Up
-MRUItem6=/Game/PlayerStuff/Offset_AIM_Forward
-MRUItem7=/Game/PlayerStuff/DYING
-MRUItem8=/Game/PlayerStuff/walking_to_dying
-MRUItem9=/Game/PlayerStuff/NEWFIRING
-MRUItem10=/Game/PlayerStuff/FIRING
-MRUItem11=/Game/PlayerStuff/firing_rifle
-MRUItem12=/Game/BP_MyPlayer1
-MRUItem13=/Game/AimingBeam
-MRUItem14=/Game/Shooter_GameMode_BP
+MRUItem0=/Game/PlayerStuff/walking_to_dying
+MRUItem1=/Game/BP_MyPlayer1
+MRUItem2=/Game/Shooter_GameMode_BP
+MRUItem3=/Game/MAINHUD_NEW
+MRUItem4=/Game/Levels/MainMenu
+MRUItem5=/Game/Levels/TechDemo4Level1
+MRUItem6=/Game/pistol
+MRUItem7=/Game/fight
+MRUItem8=/Game/PlayerStuff/Offset_AIM_Up
+MRUItem9=/Game/PlayerStuff/Offset_AIM_Forward
+MRUItem10=/Game/PlayerStuff/DYING
+MRUItem11=/Game/PlayerStuff/NEWFIRING
+MRUItem12=/Game/PlayerStuff/FIRING
+MRUItem13=/Game/PlayerStuff/firing_rifle
+MRUItem14=/Game/AimingBeam
 MRUItem15=/Game/GameModeBP
 MRUItem16=/Game/TestPlayerController
 MRUItem17=/Game/MainMenu2
@@ -2826,7 +2826,7 @@ RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLigh
 InstalledPlugins=XRVisualization
 
 [MessageLog]
-LastLogListing=BlueprintLog
+LastLogListing=PIE
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
