--- a/MyProject2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/MyProject2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -134,8 +134,8 @@ CurrentPosGridSize=0
 LastLevel=/Game/Levels/TechDemo4Level1
 
 [ModuleFileTracking]
-MyProject2.TimeStamp=2024.01.06-13.32.03
-MyProject2.LastCompileMethod=Runtime
+MyProject2.TimeStamp=2024.01.07-12.50.57
+MyProject2.LastCompileMethod=External
 PakFile.TimeStamp=2023.03.31-12.12.07
 PakFile.LastCompileMethod=Unknown
 RSA.TimeStamp=2023.03.31-12.12.09
@@ -2636,7 +2636,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game
+ContentBrowserTab1.SelectedPaths=/Classes_Game/MyProject2
 ContentBrowserTab1.PluginFilters=
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
@@ -2838,31 +2838,31 @@ ABP_Soldier_C=
 K2Node_VariableGet=CapsuleComponent.Physics.ConstraintsGroup,
 
 [ContentBrowserRecent]
-MRUItem0=/Game/fight
-MRUItem1=/Game/PlayerStuff/DYING
-MRUItem2=/Game/die2
-MRUItem3=/Game/PlayerStuff/SoldierBlendSpace
-MRUItem4=/Game/MAINHUD_NEW
-MRUItem5=/Game/ABP_Soldier
-MRUItem6=/Game/AimingBeam
-MRUItem7=/Game/Shooter_GameMode_BP
-MRUItem8=/Game/UpperFloor
-MRUItem9=/Game/MidStairs
-MRUItem10=/Game/Stairs
-MRUItem11=/Game/WallsColour
-MRUItem12=/Game/InsideWalls
-MRUItem13=/Game/Barriers
-MRUItem14=/Game/ObstacleColour
-MRUItem15=/Game/Levels/TechDemo4Level1
-MRUItem16=/Game/Levels/MainMenu
+MRUItem0=/Game/Levels/TechDemo4Level1
+MRUItem1=/Game/Shooter_GameMode_BP
+MRUItem2=/Game/Levels/MainMenu
+MRUItem3=/Game/fight
+MRUItem4=/Game/PlayerStuff/DYING
+MRUItem5=/Game/die2
+MRUItem6=/Game/PlayerStuff/SoldierBlendSpace
+MRUItem7=/Game/MAINHUD_NEW
+MRUItem8=/Game/ABP_Soldier
+MRUItem9=/Game/AimingBeam
+MRUItem10=/Game/UpperFloor
+MRUItem11=/Game/MidStairs
+MRUItem12=/Game/Stairs
+MRUItem13=/Game/WallsColour
+MRUItem14=/Game/InsideWalls
+MRUItem15=/Game/Barriers
+MRUItem16=/Game/ObstacleColour
 MRUItem17=/Game/PLAYERHUD
 MRUItem18=/Game/BP_MyPlayer1
 MRUItem19=/Game/MainMenuGameModeBP
 
 [PlacementMode]
+RecentlyPlaced=/Game/Ammo.Ammo;
 RecentlyPlaced=/Game/InsideWalls.InsideWalls;
 RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
-RecentlyPlaced=/Game/Ammo.Ammo;
 RecentlyPlaced=/Game/UpperFloor.UpperFloor;
 RecentlyPlaced=/Game/MidStairs.MidStairs;
 RecentlyPlaced=/Game/Stairs.Stairs;
